--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,7 @@
 	font-family: "Noto Sans Variable", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	scroll-behavior: smooth;
 }
 
 @layer base {
